--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
+    "flush-promises": "^1.0.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "jest": "^21.1.0",
+    "jest": "^21.2.1",
     "jest-vue-preprocessor": "^1.1.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
@@ -57,7 +58,7 @@
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.3",
-    "vue-test-utils": "https://github.com/vuejs/vue-test-utils",
+    "vue-test-utils": "^1.0.0-beta.3",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
